@@ -1,6 +1,11 @@
 $Id$
 ===============================================================
 
+92	Luke Howard <lukeh@padl.com>
+
+	* signal handling fix: don't restore handler
+	  unnecessarily
+
 91	Luke Howard <lukeh@padl.com>
 
 	* reorganized SIGPIPE blocking code
